# motokigo

./: .gitignore  Cargo.toml  README.md  build.rs  regen_globals.rs  rustfmt.toml
builtins/: Cargo.toml
builtins/src/: lib.rs
examples/: basic.mk
macros/: Cargo.toml
macros/src/: lib.rs
renderjack/: .gitignore  .gitmodules  Cargo.toml
renderjack/debug/shaders/basic/: ast.rson  code.ron  compiled.glsl
renderjack/res/mesh/: monkey.ply
renderjack/res/shaders/glsl/: basic.fs  basic.vs
renderjack/res/shaders/shadelang/: basic.sl
renderjack/src/: camera.rs  lib.rs  main.rs  mesh.rs  shader.rs  transform.rs
src/: ast.rs  lib.rs  parser.rs  scanner.rs
src/builtins/: matrix.rs  mod.rs  vector.rs
src/builtins/functions/: basics.rs  functions.rs  mod.rs  stdlib.rs  utils.rs
src/compiler/: mod.rs  program_data.rs  resolve_types.rs
src/glsl/: compiler.rs  mod.rs
src/vm/: machine.rs  mod.rs
tests/: compile_fail_tests.rs  compile_success_tests.rs  compile_tests.rs  math_tests.rs
