[package]
name = "motokigo"
version = "0.1.0"
authors = ["Nyrox <root@nyrox.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck="1.2"
num-traits="*"
paste="*"
builtins={ path="./builtins/" }


[build-dependencies]
regex="1"

[workspace]
members=[
    "builtins",
    "macros"
]
