[package]
name = "renderjack"
version = "0.1.0"
authors = ["Nyrox <root@nyrox.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug=true

[dependencies]
image="0.23"
cgmath="0.17"
bytemuck="1.2"
motokigo={path=".."}
gl="*"
glutin="*"
